[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -314.0
margin_top = -296.5
margin_right = 314.0
margin_bottom = 296.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 621.0
margin_bottom = 586.0

[node name="level" type="OptionButton" parent="PanelContainer2/Panel"]
margin_left = 315.0
margin_top = 80.852
margin_right = 558.0
margin_bottom = 129.852
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer2/Panel/level"]
margin_left = -244.379
margin_top = -8.96414
margin_right = -95.3792
margin_bottom = 38.0359
custom_fonts/font = SubResource( 2 )
text = "Level"

[node name="bot_no" type="HScrollBar" parent="PanelContainer2/Panel"]
margin_left = 315.0
margin_top = 200.0
margin_right = 481.0
margin_bottom = 240.0
max_value = 24.0
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="PanelContainer2/Panel/bot_no"]
margin_left = -250.26
margin_top = -6.82199
margin_right = -80.2597
margin_bottom = 40.178
custom_fonts/font = SubResource( 2 )
text = "Bot Count"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="PanelContainer2/Panel/bot_no"]
margin_left = 199.907
margin_top = -5.52982
margin_right = 269.907
margin_bottom = 40.4702
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bot_difficulty" type="HScrollBar" parent="PanelContainer2/Panel"]
margin_left = 315.735
margin_top = 297.032
margin_right = 481.735
margin_bottom = 337.032
min_value = 1.0
max_value = 4.0
step = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="PanelContainer2/Panel/bot_difficulty"]
margin_left = -250.26
margin_top = -6.82199
margin_right = -80.2597
margin_bottom = 40.178
custom_fonts/font = SubResource( 2 )
text = "Bot Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label2" type="Label" parent="PanelContainer2/Panel/bot_difficulty"]
margin_left = 200.0
margin_top = -6.0
margin_right = 267.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 56.4023
margin_top = 16.384
margin_right = 407.402
margin_bottom = 43.384
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = ExtResource( 2 )

[node name="start" type="Button" parent="."]
margin_left = 1110.05
margin_top = 637.849
margin_right = 1242.05
margin_bottom = 673.849
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="PanelContainer2/Panel/level" to="." method="_on_level_item_selected"]
[connection signal="value_changed" from="PanelContainer2/Panel/bot_no" to="." method="_on_bot_no_value_changed"]
[connection signal="value_changed" from="PanelContainer2/Panel/bot_difficulty" to="." method="_on_bot_difficulty_value_changed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
